--- a/meta/main.yaml
+++ b/meta/main.yaml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: openssh
   author: Corbin Bartsch
   description: Sensible and secure defaults for OpenSSH server
   license: MIT
