--- a/tasks/template_config.yaml
+++ b/tasks/template_config.yaml
@@ -13,13 +13,8 @@
     mode: '0644'
   become: true
   register: sshd_config_file
-
-- name: Restart service
-  ansible.builtin.systemd:
-    name: sshd
-    enabled: true
-    state: restarted
-  when: sshd_config_file.changed
+  notify:
+    - Restart sshd
 
 - name: Write banner file
   ansible.builtin.template:
