--- a/defaults/main.yaml
+++ b/defaults/main.yaml
@@ -1,33 +1,33 @@
 ---
 
-sshd_config_path: /etc/ssh
+openssh_sshd_config_path: /etc/ssh
 
-ssh_port: 22
-ssh_address_family: any
-ssh_listen_addresses:
+openssh_port: 22
+openssh_address_family: any
+openssh_listen_addresses:
   - 0.0.0.0
 
-ssh_allow_groups: ssh
-ssh_login_grace_time: 20
-ssh_permit_root_login: 'no'
-ssh_strict_modes: 'yes'
-ssh_max_auth_tries: 3
-ssh_max_sessions: 2
+openssh_allow_groups: ssh
+openssh_login_grace_time: 20
+openssh_permit_root_login: 'no'
+openssh_strict_modes: 'yes'
+openssh_max_auth_tries: 3
+openssh_max_sessions: 2
 
-ssh_pubkey_authentication: 'yes'
+openssh_pubkey_authentication: 'yes'
 
-ssh_authorized_keys_file: .ssh/authorized_keys
+openssh_authorized_keys_file: .ssh/authorized_keys
 
-ssh_kexalgorithms:
-  # Mozilla Modern
+openssh_kexalgorithms:
+  # Compliant with Mozilla Modern
   - curve25519-sha256@libssh.org
   - ecdh-sha2-nistp521
   - ecdh-sha2-nistp384
   - ecdh-sha2-nistp256
   - diffie-hellman-group-exchange-sha256
 
-ssh_ciphers:
-  # Mozilla Modern
+openssh_ciphers:
+  # Compliant with Mozilla Modern
   - chacha20-poly1305@openssh.com
   - aes256-gcm@openssh.com
   - aes128-gcm@openssh.com
@@ -35,8 +35,8 @@ ssh_ciphers:
   - aes192-ctr
   - aes128-ctr
 
-ssh_macs:
-  # Mozilla Modern
+openssh_macs:
+  # Compliant with Mozilla Modern
   - hmac-sha2-512-etm@openssh.com
   - hmac-sha2-256-etm@openssh.com
   - umac-128-etm@openssh.com
@@ -44,27 +44,27 @@ ssh_macs:
   - hmac-sha2-256
   - umac-128@openssh.com
 
-ssh_hostbased_authentication: 'no'
-ssh_password_authentication: 'no'
-ssh_permit_empty_passwords: 'no'
-ssh_challenge_response_authentication: 'no'
-ssh_kerberos_authentication: 'no'
-ssh_gssapi_authentication: 'no'
-ssh_use_pam: 'yes'
+openssh_hostbased_authentication: 'no'
+openssh_password_authentication: 'no'
+openssh_permit_empty_passwords: 'no'
+openssh_challenge_response_authentication: 'no'
+openssh_kerberos_authentication: 'no'
+openssh_gssapi_authentication: 'no'
+openssh_use_pam: 'yes'
 
-ssh_allow_agent_forwarding: 'no'
-ssh_permit_tunnel: 'no'
+openssh_allow_agent_forwarding: 'no'
+openssh_permit_tunnel: 'no'
 
-ssh_x11_forwarding: 'no'
+openssh_x11_forwarding: 'no'
 
-ssh_print_motd: 'no'
+openssh_print_motd: 'no'
 
-ssh_permit_user_env: false
-ssh_accept_env:
+openssh_permit_user_env: false
+openssh_accept_env:
   - LANG
   - 'LC_*'
 
-ssh_banner: true
-ssh_banner_file: /etc/issue.net
+openssh_banner: true
+openssh_banner_file: /etc/issue.net
 
-ssh_loglevel: "VERBOSE"
+openssh_loglevel: "VERBOSE"
