--- a/meta/main.yaml
+++ b/meta/main.yaml
@@ -1,10 +1,11 @@
 ---
 galaxy_info:
   role_name: openssh
+  namespace: coredotbin
   author: Corbin Bartsch
   description: Sensible and secure defaults for OpenSSH server
   license: MIT
-  min_ansible_version: 2.9
+  min_ansible_version: v2.9
   platforms:
     - name: Debian
       versions:
